# mongodb-voyageai

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE.txt  PERFORMANCE.md  PUBLISHING.md  QUANTIZATION_GUIDE.md  README.md  RERANKING_GUIDE.md  SECURITY.md
benches/: benchmarks.rs
examples/: asymmetric-retrieval.rs  chunk-normalize.rs  classify-topics.rs  compare-quantization.rs  contextualized-embeddings.rs  embed-single.rs  quantization.rs  rag-with-quantization.rs  rerank-documents.rs  sample-doc copy.txt  search.rs  test_exam.rs
src/: client copy.rs  client.rs  config.rs  context.rs  embed.rs  lib.rs  model.rs  output_dtype.rs  rerank.rs  reranking.rs  usage.rs
src/chunk/: chunking.rs  mod.rs  normalizer.rs
src/pairwise/: cosine_similarity.rs  mod.rs
tests/: client-embed.rs  client-rerank.rs
