[package]
name = "mongodb-voyageai"
version = "0.1.3"
edition = "2024"
description = "A client for generating embeddings and reranking with Voyage AI"
license = "MIT"
repository = "https://github.com/esteban-pb-551/mongodb-voyageai"
homepage = "https://github.com/esteban-pb-551/mongodb-voyageai"
documentation = "https://docs.rs/mongodb-voyageai"
readme = "README.md"
keywords = ["voyageai", "embeddings", "rerank", "ai", "nlp"]
categories = ["api-bindings", "science"]

[dependencies]
reqwest = { version = "0.13.2", default-features = false, features = ["json", "native-tls"] }
ndarray = "0.16"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
tracing = "0.1"

[dependencies.rustls]
version = "0.23"
default-features = false
features = ["ring"]

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
mockito = "1"
tokio = { version = "1", features = ["rt", "macros", "test-util"] }

[[bench]]
name = "benchmarks"
harness = false